--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,19 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, id: "ratings_form", :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @checked_ratings.include?(rating), id: "ratings_#{rating}"
+  = submit_tag 'Refresh'
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th(class="#{@hilite1}")= link_to "Movie Title", movies_path(:sort => "title"), id: "title_header"
       %th Rating
-      %th Release Date
+      %th(class="#{@hilite2}")= link_to "Release Date", movies_path(:sort => "release_date"), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
