--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, @checked_ratings.include?(rating), id: "ratings_#{rating}"
+    = check_box_tag "ratings[#{rating}]", 1, (@checked_ratings.include?(rating) unless @checked_ratings.nil?), id: "ratings_#{rating}"
   = submit_tag 'Refresh'
 
 %table#movies
@@ -16,11 +16,19 @@
       %th(class="#{@hilite2}")= link_to "Release Date", movies_path(:sort => "release_date"), id: "release_date_header"
       %th More Info
   %tbody
-    - @movies.each do |movie|
+    - @movies.each do |movie| 
       %tr
-        %td= movie.title 
+        %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
+ 
+%h1 Search TMDb for a movie
+ 
+= form_tag :action => 'search_tmdb' do
+ 
+  %label{:for => 'search_terms'} Search Terms
+  = text_field_tag 'search_terms'
+  = submit_tag 'Search TMDb'
