--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,14 +1,20 @@
 %h1 Create New Movie
 
 = form_tag movies_path do
+  - if @movie.errors.any? 
+    #error_explanation
+      %h2= "#{pluralize(@movie.errors.count, "error")} prohibited this post from being saved:"
+      %ul
+        - @movie.errors.full_messages.each do |msg|
+          %li= msg
 
-  = label :movie, :title, 'Title'
-  = text_field :movie, 'title'
+  = label :movie, :title
+  = text_field :movie, :title
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+  = label :movie, :rating
+  = text_field :movie, :rating
 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = label :movie, :release_date, "Release Date"
+  = text_field :movie, :release_date, :placeholder => 'mm/dd/yy'
 
   = submit_tag 'Save Changes'
