--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -14,6 +14,9 @@
   = label :movie, :rating
   = text_field :movie, :rating
 
+  = label :movie, :actors, "Actors"
+  = text_field :movie, :actors
+
   = label :movie, :release_date, "Release Date"
   = text_field :movie, :release_date, :placeholder => 'mm/dd/yy'
 
