--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -8,7 +8,10 @@
     = @movie.rating
   %li
     Released on:
-    = @movie.release_date.strftime("%B %d, %Y")
+    = @movie.release_date.strftime("%B %d, %Y") unless @movie.release_date.nil?
+  %li
+    Actors:
+    = @movie.actors  
 
 %h3 Description:
 
